[tool.poetry]
name = "evaluation-modules"
version = "0.1.0"
description = ""
authors = ["Josh Bercich <joshbercich@gmail.com>"]
readme = "README.md"
packages = [{include = "evaluation_modules"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
